# LLM-zoomcamp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
notebooks/week01/: [ha]-week01-Introduction-to-LLM-and-RAG.ipynb  ha01. Introduction to LLM and RAG.ipynb  lecture-week01-Introduction-to-LLM0-and-RAG.ipynb
notebooks/week02/: [ha]-week02-open-source-llm.ipynb  [lecture]-week02-open-source-llm.ipynb
notebooks/week03/: ha-week03-vector-search.ipynb  lecture-week03-vector-search.ipynb
notebooks/workshop-DLT/: homework-DLT-RAG-from-notion.ipynb  lecture-workshop-dlt-rag.ipynb
project/settings/: openai.py
